CACHE CLEAR DEPLOYMENT: Force Render Update
 RENDER HOSTING ISSUE: Conversation intelligence not reflecting
 CACHE BUSTING: Added timestamp comments to force refresh
 TARGET ISSUE: hey  weather location (should be conversational)

 EXPECTED AFTER DEPLOYMENT:
 hey  Hey there! How can I help you today?
 hello  Hello! What can I assist you with?
 hi  Hi! I'm here to help with your needs
 NO MORE: hey  Please specify a location

 FORCE DEPLOY #6: 2025-08-11 02:08:30
 RENDER URL: buddy-ai-0t6c.onrender.com
 STATUS: FORCING CACHE CLEAR + CONVERSATION FIX

--- a/static/index.html
+++ b/static/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<!-- CONVERSATION INTELLIGENCE UPDATE: 2025-08-11 02:08:30 - Cache Bust -->
+<!-- SMART GREETING RECOGNITION: hey/hello/hi properly handled -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
