Complete BUDDY AI System Enhancement
 Database Integration:
- Added comprehensive database system with 8 tables
- User analytics and behavior optimization
- Performance tracking and metrics

 Enhanced Task Management:
- 7 template categories (Work, Personal, Health, Learning, Finance, Shopping, Travel)
- Smart categorization and auto-detection
- Template-based task creation with learning

 Feature Module Architecture:
- 9 specialized feature modules with centralized management
- Self-optimization and performance tracking
- Enhanced routing and processing

 System Integration:
- Complete integration testing passed
- All components working together
- Production-ready implementation

 Documentation:
- Comprehensive test results and summaries
- Implementation documentation
- Integration verification complete

--- a/static/index.html
+++ b/static/index.html
@@ -1894,15 +1894,22 @@
                 "Wind speed and direction"
             ],
             tasks: [
+                "Task categories",
+                "Show task templates",
+                "Template for work tasks",
+                "Template for personal tasks", 
+                "Template for health tasks",
+                "Template for learning tasks",
+                "Add work task: Complete project proposal",
+                "Add personal task: Buy groceries",
+                "Add health task: Morning workout",
                 "Show my tasks",
-                "Add task: Call the dentist",
-                "Create new to-do list",
+                "Task statistics",
                 "What tasks do I have?",
                 "Mark task as complete",
                 "Set reminder for tomorrow",
                 "Priority tasks today",
-                "Overdue tasks",
-                "Task categories"
+                "Overdue tasks"
             ],
             calendar: [
                 "Show my calendar",
